# halo2

halo2/src/: lib.rs
halo2_gadgets/: Cargo.toml
halo2_gadgets/benches/: poseidon.rs
halo2_gadgets/src/: ecc.rs  lib.rs  poseidon.rs  sha256.rs  sinsemilla.rs  utilities.rs
halo2_gadgets/src/ecc/: chip.rs
halo2_gadgets/src/ecc/chip/: add.rs  add_incomplete.rs  constants.rs  mul.rs  mul_fixed.rs  witness_point.rs
halo2_gadgets/src/ecc/chip/mul/: complete.rs  incomplete.rs  overflow.rs
halo2_gadgets/src/ecc/chip/mul_fixed/: base_field_elem.rs  full_width.rs  short.rs
halo2_gadgets/src/poseidon/: pow5.rs  primitives.rs
halo2_gadgets/src/poseidon/primitives/: mds.rs  p128pow5t3.rs  test_vectors.rs
halo2_gadgets/src/sha256/: table16.rs
halo2_gadgets/src/sha256/table16/: compression.rs  gates.rs  message_schedule.rs  spread_table.rs  util.rs
halo2_gadgets/src/sha256/table16/compression/: compression_gates.rs  compression_util.rs
halo2_gadgets/src/sha256/table16/message_schedule/: schedule_gates.rs  schedule_util.rs  subregion1.rs  subregion2.rs  subregion3.rs
halo2_gadgets/src/sinsemilla/: chip.rs  merkle.rs  message.rs  primitives.rs
halo2_gadgets/src/sinsemilla/chip/: generator_table.rs  hash_to_point.rs
halo2_gadgets/src/sinsemilla/merkle/: chip.rs
halo2_gadgets/src/utilities/: cond_swap.rs  decompose_running_sum.rs  lookup_range_check.rs
halo2_proofs/: Cargo.toml
halo2_proofs/benches/: dev_lookup.rs  plonk.rs
halo2_proofs/examples/: circuit-layout.rs  cost-model.rs  simple-example.rs  two-chip.rs
halo2_proofs/src/: arithmetic.rs  circuit.rs  dev.rs  helpers.rs  io.rs  lib.rs  plonk.rs  poly.rs  transcript.rs
halo2_proofs/src/circuit/: layouter.rs  value.rs
halo2_proofs/src/circuit/floor_planner/: single_pass.rs  v1.rs
halo2_proofs/src/dev/: cost.rs  failure.rs  gates.rs  metadata.rs  util.rs
halo2_proofs/src/dev/failure/: emitter.rs
halo2_proofs/src/dev/graph/: layout.rs
halo2_proofs/src/plonk/: assigned.rs  circuit.rs  error.rs  keygen.rs  lookup.rs  permutation.rs  prover.rs  vanishing.rs  verifier.rs
halo2_proofs/src/plonk/circuit/: compress_selectors.rs
halo2_proofs/src/plonk/lookup/: prover.rs  verifier.rs
halo2_proofs/src/plonk/permutation/: keygen.rs  prover.rs  verifier.rs
halo2_proofs/src/plonk/vanishing/: prover.rs  verifier.rs
halo2_proofs/src/plonk/verifier/: batch.rs
halo2_proofs/src/poly/: commitment.rs  domain.rs  evaluator.rs  multiopen.rs
halo2_proofs/src/poly/commitment/: msm.rs  prover.rs  verifier.rs
halo2_proofs/src/poly/multiopen/: prover.rs  verifier.rs
halo2_proofs/tests/: plonk_api.rs
(+1 files in other folders)
