[package]
name = "halo2_gadgets"
version = "0.2.0"
authors = [
    "Sean Bowe <sean@electriccoin.co>",
    "Jack Grigg <jack@electriccoin.co>",
    "Daira Hopwood <daira@jacaranda.org>",
    "Ying Tong Lai <yingtong@electriccoin.co>",
    "Kris Nuttycombe <kris@electriccoin.co>",
]
edition = "2021"
rust-version = "1.56.1"
description = "Reusable gadgets and chip implementations for Halo 2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zcash/halo2"
readme = "README.md"
categories = ["cryptography"]
keywords = ["halo", "proofs", "zcash", "zkp", "zkSNARKs"]

[dependencies]
arrayvec = { version = "0.7.0", default-features = false }
bitvec = { version = "1", default-features = false }
ff = "0.13"
group = "0.13"
halo2_proofs = { version = "0.2", path = "../halo2_proofs" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
pasta_curves = { git = "https://github.com/xxuejie/pasta_curves", rev = "2ec5d9a" }
subtle = { version = "2.2.1", default-features = false, features = ["i128"] }
uint = { version = "0.9.2", default-features = false }

hashbrown = "0.12.3"

[features]
# In-development features
# See https://zcash.github.io/halo2/dev/features.html
beta = [
    "halo2_proofs/beta",
]
nightly = [
    "beta",
    "halo2_proofs/nightly",
    "unstable-sha256-gadget",
]
unstable-sha256-gadget = []
# Add flags for in-development features above this line.
