[package]
name = "halo2_proofs"
version = "0.2.0"
authors = [
    "Sean Bowe <sean@electriccoin.co>",
    "Ying Tong Lai <yingtong@electriccoin.co>",
    "Daira Hopwood <daira@electriccoin.co>",
    "Jack Grigg <jack@electriccoin.co>",
]
edition = "2021"
rust-version = "1.56.1"
description = """
Fast PLONK-based zero-knowledge proving system with no trusted setup
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/zcash/halo2"
documentation = "https://docs.rs/halo2_proofs"
readme = "README.md"
categories = ["cryptography"]
keywords = ["halo", "proofs", "zkp", "zkSNARKs"]

[dependencies]
ff = "0.13"
group = "0.13"
hashbrown = "0.12.3"
rand_core = { version = "0.6", default-features = false }
blake2b_simd = { version = "1", default-features = false }

[dependencies.pasta_curves]
version = "0.5"
default-features = false
features = ["bits", "alloc"]

[features]
default = []
# In-development features
# See https://zcash.github.io/halo2/dev/features.html
beta = [
]
nightly = [
    "beta",
]
# Add flags for in-development features above this line.
